--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   firebase_core: ^3.4.0
   firebase_auth: ^5.2.0
 
+  # progress
+  modal_progress_hud_nsn: ^0.5.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
