--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   # firebase
   firebase_core: ^3.4.0
   firebase_auth: ^5.2.0
+  cloud_firestore: ^5.4.0
 
   # progress
   modal_progress_hud_nsn: ^0.5.0
